@startuml

class Value {
    - name: String { get set }

    # Value()
    # Value(name: String)
    + toString(): String
}

class StringValue  {
    - value: String { get set }

    + StringValue()
    + StringValue(name: String, value: String)
    + toString(): String
}

class BooleanValue {
    - value: boolean { get set }

    + BooleanValue()
    + BooleanValue(name: String, value: boolean)
    + toString(): String
}

class IntValue {
    - value: int { get set }

    + IntValue()
    + IntValue(name: String, value: int)
    + toString(): String
}

class DoubleValue {
    - value: double { get set }

    + DoubleValue()
    + DoubleValue(name: String, value: double)
    + toString(): String
}

Value <|-- StringValue
Value <|--- BooleanValue
Value <|--- IntValue
Value <|-- DoubleValue
@enduml